cmake_minimum_required(VERSION 2.6)

add_compile_options(-g -O0 -std=c++11)

add_executable(t1 src/two-sum.cc)
add_executable(t2 src/add-two-num.cc)
add_executable(t3 src/longest-substr.cc)
add_executable(t7 src/t7.cc)
add_executable(t9 src/t9.cc)
add_executable(t14 src/t14.cc)
add_executable(t20 src/t20.cc)
add_executable(t21 src/t21.cc)