cmake_minimum_required(VERSION 2.6)

add_compile_options(-g -O0 -std=c++11)

#add_executable(t1 src/t1.cc)
#add_executable(t2 src/t2.cc)
#add_executable(t3 src/t3.cc)
#add_executable(t4 src/t4.cc)
#add_executable(t7 src/t7.cc)
#add_executable(t8 src/t8.cc)
#add_executable(t9 src/t9.cc)
#add_executable(t14 src/t14.cc)
#add_executable(t20 src/t20.cc)
#add_executable(t21 src/t21.cc)
#add_executable(t27 src/t27.cc)
add_executable(t155 src/t155.cc)

